Fixig some spacing.

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -26,6 +26,11 @@
 
   p {
     font-size: 15px;
+    margin: 0;
+  }
+
+  .conta {
+    margin-bottom: 5%;
   }
 }
 
